Agregada seccion about

--- a/index.html
+++ b/index.html
@@ -30,9 +30,32 @@
       </nav>
     </header>
     <main class="main">
-      <a href="./" class="bear"><img src="media/bear.png" alt="" /></a>
+      <a href="./" class="bear"
+        ><img src="media/photos/bear.png" alt="bear logo" title="bear logo"
+      /></a>
       <h1>bigbbadbear</h1>
       <p>Desarrollador Web</p>
     </main>
+    <section id="about" class="about">
+      <h2>About</h2>
+      <article class="myself">
+        <img src="media/photos/me.png" alt="myself" title="myself" />
+        <p>
+          Mi nombre es
+          <span class="my_name">Dilan Daniel de la Rosa Yanes</span> Soy
+          estudiante estudiante de Ingeniería de Sistemas.
+        </p>
+      </article>
+      <p>
+        Soy una persona autodidacta, que le gusta aprender de todo un poco,
+        salir en bicicleta y ayudar a todo el que lo necesite, siempre que
+        pueda...
+      </p>
+      <p>
+        Soy minimalista y eso lo reflejo en lo que hago... Me encantan los osos,
+        me parecen los animales más bellos, imponentes y majestuosos, son unos
+        verdaderos reyes.
+      </p>
+    </section>
   </body>
 </html>
