--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="robots" content="index,follow" />
   </head>
   <body>
+    <!--
     <header class="head">
       <nav class="head__nav">
         <ul class="nav__list">
@@ -29,6 +30,7 @@
         </ul>
       </nav>
     </header>
+  -->
     <main class="main">
       <a href="./" class="bear"
         ><img src="media/photos/bear.png" alt="bear logo" title="bear logo"
@@ -37,19 +39,14 @@
       <p>Desarrollador Web</p>
     </main>
     <section id="about" class="about">
-      <h2>About</h2>
+      <h2>Hola, soy <span class="my_name">Dilan de la Rosa</span></h2>
       <article class="myself">
         <img src="media/photos/me.png" alt="myself" title="myself" />
-        <p>
-          Mi nombre es
-          <span class="my_name">Dilan Daniel de la Rosa Yanes</span> Soy
-          estudiante estudiante de Ingeniería de Sistemas.
-        </p>
       </article>
       <p>
-        Soy una persona autodidacta, que le gusta aprender de todo un poco,
-        salir en bicicleta y ayudar a todo el que lo necesite, siempre que
-        pueda...
+        Actualmente soy un estudiante de Ingeniería de Sistemas. Soy una persona
+        autodidacta, que le gusta aprender de todo un poco, salir en bicicleta y
+        ayudar a todo el que lo necesite, siempre que pueda...
       </p>
       <p>
         Soy minimalista y eso lo reflejo en lo que hago... Me encantan los osos,
