Dark | white mode

--- a/index.html
+++ b/index.html
@@ -20,22 +20,25 @@
     <meta name="robots" content="index,follow" />
   </head>
   <body>
-    <!--
     <header class="head">
       <nav class="head__nav">
         <ul class="nav__list">
           <li><a href="#about">Sobre mi</a></li>
-          <li><a href="#cv">Curriculum</a></li>
+          <li>
+            <a href="media/cv/curriculum.pdf" target="_blank" class="cv"
+              >Curriculum</a
+            >
+          </li>
           <li><a href="#contact">Contacto</a></li>
         </ul>
+        <button id="darkmode" class="darkmode">🌙</button>
       </nav>
     </header>
-  -->
     <main class="main">
       <a href="./" class="bear"
         ><img src="media/photos/bear.png" alt="bear logo" title="bear logo"
       /></a>
-      <h1>bigbbadbear</h1>
+      <h1 class="bigbbadbear">bigbbadbear</h1>
       <p>Desarrollador Web</p>
     </main>
     <section id="about" class="about">
@@ -54,5 +57,6 @@
         verdaderos reyes.
       </p>
     </section>
+    <script src="js/main.js"></script>
   </body>
 </html>
